1106 Data Mining HW

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ EAS506 - Data Mining/HW2/msah/
 EAS506 - Data Mining/HW2/msah.rar
 
 *.tmp
+
+EAS506 - Data Mining/HW3/.ipynb_checkpoints/HW3_P1-checkpoint.ipynb
+
+EAS506 - Data Mining/HW3/.ipynb_checkpoints/HW3_P2-checkpoint.ipynb
+
+EAS506 - Data Mining/HW3/.ipynb_checkpoints/HW3_P4-checkpoint.ipynb
