--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ EAS506 - Data Mining/HW3/.ipynb_checkpoints/HW3_P1-checkpoint.ipynb
 EAS506 - Data Mining/HW3/.ipynb_checkpoints/HW3_P2-checkpoint.ipynb
 
 EAS506 - Data Mining/HW3/.ipynb_checkpoints/HW3_P4-checkpoint.ipynb
+
+EAS506 - Data Mining/HW1/.ipynb_checkpoints/
+
+*.odt#
