--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ EAS506 - Data Mining/HW3/.ipynb_checkpoints/HW3_P4-checkpoint.ipynb
 EAS506 - Data Mining/HW1/.ipynb_checkpoints/
 
 *.odt#
+
+EAS503/LAB2/test_4families_annovar.vcf
+
+EAS503/LAB2/test_4families_annovar.vcf.gz
+
+EAS506 - Data Mining/Final Project/New_York_City_.png
