#1201 Data mining homework + cleaning folders

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,19 @@ EAS506 - Data Mining/Final Project/New_York_City_.png
 *.m~
 
 *.mlx
+
+EAS506 - Data Mining/.RData
+
+EAS506 - Data Mining/.Rhistory
+
+EAS506 - Data Mining/HW4/.ipynb_checkpoints/HW4_Q1-checkpoint.ipynb
+
+EAS506 - Data Mining/HW4/.ipynb_checkpoints/HW4_Q2-checkpoint.ipynb
+
+EAS506 - Data Mining/HW4/.ipynb_checkpoints/HW4_Q3-checkpoint.ipynb
+
+EAS506 - Data Mining/HW4/.ipynb_checkpoints/HW4_Q4-checkpoint.ipynb
+
+EAS506 - Data Mining/HW4/.ipynb_checkpoints/prostate-checkpoint.csv
+
+EAS506 - Data Mining/HW4/.ipynb_checkpoints/wine-checkpoint.csv
