#1201 Updated Ignore and Lab2

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ EAS506 - Data Mining/HW4/.ipynb_checkpoints/HW4_Q4-checkpoint.ipynb
 EAS506 - Data Mining/HW4/.ipynb_checkpoints/prostate-checkpoint.csv
 
 EAS506 - Data Mining/HW4/.ipynb_checkpoints/wine-checkpoint.csv
+
+EAS503/LAB2/.ipynb_checkpoints/
