#1202 DataMining HW4 All done, written report rough

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,13 @@ EAS506 - Data Mining/HW4/.ipynb_checkpoints/prostate-checkpoint.csv
 EAS506 - Data Mining/HW4/.ipynb_checkpoints/wine-checkpoint.csv
 
 EAS503/LAB2/.ipynb_checkpoints/
+
+EAS506 - Data Mining/HW4/msah/SPAM_DATA/.ipynb_checkpoints/
+
+EAS506 - Data Mining/HW4/msah/WEEKLY_DATA/.ipynb_checkpoints/
+
+EAS506 - Data Mining/HW4/msah/WINE_DATA/.ipynb_checkpoints/
+
+EAS506 - Data Mining/HW4/WEEKLY_DATA/.ipynb_checkpoints/
+
+EAS506 - Data Mining/HW4/msah/PROSTATE_DATA/.ipynb_checkpoints/
