#1202 Turn in version, minor edits

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ EAS506 - Data Mining/HW4/msah/WINE_DATA/.ipynb_checkpoints/
 EAS506 - Data Mining/HW4/WEEKLY_DATA/.ipynb_checkpoints/
 
 EAS506 - Data Mining/HW4/msah/PROSTATE_DATA/.ipynb_checkpoints/
+
+EAS506 - Data Mining/HW4/msah/WrittenReportHW4.pdf
+
+EAS506 - Data Mining/HW4/msah.zip
