#1221 End Of Semester File Cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,16 @@ EAS506 - Data Mining/HW4/msah/PROSTATE_DATA/.ipynb_checkpoints/
 EAS506 - Data Mining/HW4/msah/WrittenReportHW4.pdf
 
 EAS506 - Data Mining/HW4/msah.zip
+
+EAS506 - Data Mining/HW5/.ipynb_checkpoints/
+
+EAS506 - Data Mining/HW4/.ipynb_checkpoints/
+
+EAS595 /Project/.ipynb_checkpoints/
+
+EAS595 /Project/.Rhistory
+
+*.png
+ 
+
+*.odt
